feat: Add Cyber Neon and Sunset Glow themes
- Add CYBER and SUNSET themes with full styling
- Add theme translations (EN, ZH, JA)
- Add cyber-shadow and sunset-shadow CSS utilities
- Update theme selector with Zap and Sunset icons

--- a/index.html
+++ b/index.html
@@ -128,6 +128,14 @@
         0% { filter: hue-rotate(0deg); }
         100% { filter: hue-rotate(360deg); }
       }
+
+      /* Cyber & Sunset Theme Utilities */
+      .cyber-shadow {
+        box-shadow: 0 0 15px rgba(0, 255, 225, 0.4), 0 0 30px rgba(0, 255, 225, 0.2);
+      }
+      .sunset-shadow {
+        box-shadow: 0 10px 40px -10px rgba(255, 107, 53, 0.25);
+      }
     </style>
   <script type="importmap">
 {
