perf: Optimize streaming chat rendering and layout
- Add streaming skeleton placeholder to prevent CLS
- Add scroll handler debouncing (~60fps throttle)
- Add CSS content-visibility for message bubbles
- Add SyntaxHighlighter cache (100 entries max)
- Add @tanstack/react-virtual for virtual scrolling
- Install @tanstack/react-virtual package

--- a/index.html
+++ b/index.html
@@ -150,6 +150,12 @@
       .sunset-shadow {
         box-shadow: 0 10px 40px -10px rgba(255, 107, 53, 0.25);
       }
+
+      /* Performance optimizations */
+      .message-bubble {
+        content-visibility: auto;
+        contain-intrinsic-size: 0 100px;
+      }
     </style>
   <script type="importmap">
 {
