--- a/index.html
+++ b/index.html
@@ -10,10 +10,7 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <!-- Inter for Modern, VT323 for Pixel - with display swap for better loading -->
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700&family=VT323&family=Noto+Sans+SC:wght@400;500;700&subset=chinese&display=swap" rel="stylesheet">
-    <!-- KaTeX CSS for Math Rendering -->
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/katex@0.16.9/dist/katex.minsha384-n8.css" integrity="MVd4RsNIU0tAv4ct0nTaAbDJwPJzDEaqSD1odI+WdtXRGWt2kTvGFasHpSy3SV" crossorigin="anonymous">
-    
-    <!-- Mermaid JS (Global Script for Stability) -->
+    <!-- Google Model Viewer for 3D Rendering -->
     <script src="https://cdn.jsdelivr.net/npm/mermaid@10.9.0/dist/mermaid.min.js"></script>
 
     <!-- Google Model Viewer for 3D Rendering -->
