--- a/index.html
+++ b/index.html
@@ -41,8 +41,12 @@
         background: transparent;
       }
       .theme-modern ::-webkit-scrollbar-thumb {
-        background: rgba(156, 163, 175, 0.5);
+        background-color: rgba(156, 163, 175, 0.3);
         border-radius: 3px;
+        transition: background-color 0.2s;
+      }
+      .theme-modern ::-webkit-scrollbar-thumb:hover {
+        background-color: rgba(156, 163, 175, 0.5);
       }
       
       /* Base Font Settings */
@@ -62,6 +66,9 @@
         font-display: swap;
         -webkit-font-smoothing: antialiased;
         -moz-osx-font-smoothing: grayscale;
+        text-rendering: optimizeLegibility;
+        font-kerning: normal;
+        font-feature-settings: "kern" 1, "liga" 1;
       }
 
       .theme-pixel {
@@ -97,6 +104,10 @@
         padding: 0.2em 0.4em;
         border-radius: 4px;
         font-size: 0.85em;
+        -webkit-font-smoothing: antialiased;
+        -moz-osx-font-smoothing: grayscale;
+        font-feature-settings: "calt" 1, "liga" 1;
+        font-variant-ligatures: common-ligatures;
       }
 
       /* Dialog Font Adjustments - English slightly larger to match Chinese */
@@ -131,6 +142,16 @@
       }
       .animate-cursor { animation: blink 1s steps(2) infinite; }
 
+      /* Typing cursor for streaming output */
+      .typing-cursor::after {
+        content: '▋';
+        display: inline-block;
+        vertical-align: baseline;
+        animation: blink 1s step-end infinite;
+        color: inherit;
+        margin-left: 2px;
+      }
+
       .scanline-effect::after {
         content: "";
         position: absolute;
@@ -161,6 +182,41 @@
       .message-bubble {
         content-visibility: auto;
         contain-intrinsic-size: 0 100px;
+      }
+
+      /* Message entrance animations */
+      @keyframes slideInUp {
+        from {
+          opacity: 0;
+          transform: translateY(16px) scale(0.96);
+        }
+        to {
+          opacity: 1;
+          transform: translateY(0) scale(1);
+        }
+      }
+
+      .animate-msg-in {
+        animation: slideInUp 0.35s cubic-bezier(0.25, 0.1, 0.25, 1) forwards;
+        will-change: transform, opacity;
+      }
+
+      /* Suggestion card pop-in animation */
+      @keyframes suggestionPopIn {
+        from {
+          opacity: 0;
+          transform: translateY(12px) scale(0.95);
+        }
+        to {
+          opacity: 1;
+          transform: translateY(0) scale(1);
+        }
+      }
+
+      .animate-suggestion-in {
+        animation: suggestionPopIn 0.4s cubic-bezier(0.25, 0.46, 0.45, 0.94) forwards;
+        animation-delay: 0.15s;
+        opacity: 0;
       }
     </style>
   <script type="importmap">
