feat: implement beautification plan from 美化方案.md
- Fix LLM output alignment: limit AI bubble width (max-w-80%)
- Fix theme switching lag: remove transition-colors duration-500
- Add scrollbar CSS variables for dynamic theming
- Beautify scrollbars with unified CSS variables approach
- Fix message bubble overlap with input box (pb-48 sm:pb-56)
- Fix input box centering within chat panel
- Fix KaTeX formula rendering (CSS + LaTeX preprocessing)
- Fix overscroll issue (overscroll-behavior: none)
- Adjust user bubble width (max-w-85%)

--- a/index.html
+++ b/index.html
@@ -19,40 +19,64 @@
     <!-- PixelVerse Robot Favicon -->
     <link rel="icon" type="image/svg+xml" href="data:image/svg+xml;utf8,<svg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 16 16' shape-rendering='crispEdges'><rect width='16' height='16' fill='%23000000'/><rect x='1' y='1' width='14' height='14' fill='%232D2B40'/><rect x='1' y='4' width='14' height='5' fill='%23FF00FF'/><rect x='3' y='5' width='3' height='3' fill='%2300FFFF'/><rect x='10' y='5' width='3' height='3' fill='%2300FFFF'/><rect x='4' y='12' width='8' height='1' fill='%23FFFFFF'/></svg>" />
     <style>
-      /* Custom Scrollbar - Adaptive */
-      .theme-pixel ::-webkit-scrollbar {
-        width: 12px;
-        height: 12px;
-      }
-      .theme-pixel ::-webkit-scrollbar-track {
-        background: #2d2b40;
-      }
-      .theme-pixel ::-webkit-scrollbar-thumb {
-        background: #ff00ff;
-        border: 2px solid #0d0c1d;
-        box-shadow: inset -2px -2px 0px rgba(0,0,0,0.2);
+      /* === Unified Scrollbar Style (Pixel + Modern) === */
+      ::-webkit-scrollbar {
+        width: 10px;
+        height: 10px;
       }
 
-      .theme-modern ::-webkit-scrollbar {
-        width: 6px;
-        height: 6px;
+      /* Track background - dynamic variable */
+      ::-webkit-scrollbar-track {
+        background: var(--scrollbar-track, transparent);
       }
-      .theme-modern ::-webkit-scrollbar-track {
-        background: transparent;
-      }
-      .theme-modern ::-webkit-scrollbar-thumb {
-        background-color: rgba(156, 163, 175, 0.3);
-        border-radius: 3px;
+
+      /* Thumb style */
+      ::-webkit-scrollbar-thumb {
+        background-color: var(--scrollbar-thumb, rgba(156, 163, 175, 0.3));
+        border-radius: 99px;
+        border: 2px solid transparent;
+        background-clip: content-box;
         transition: background-color 0.2s;
       }
-      .theme-modern ::-webkit-scrollbar-thumb:hover {
-        background-color: rgba(156, 163, 175, 0.5);
+
+      /* Pixel theme override */
+      .theme-pixel ::-webkit-scrollbar-thumb {
+        border-radius: 0;
+        border: 1px solid var(--scrollbar-track);
+        background-clip: border-box;
+        box-shadow: inset -1px -1px 0px rgba(0,0,0,0.5);
+      }
+
+      /* Hover effect */
+      ::-webkit-scrollbar-thumb:hover {
+        background-color: var(--scrollbar-hover, rgba(156, 163, 175, 0.5));
       }
       
       /* Base Font Settings */
       body {
         margin: 0;
         padding: 0;
+      }
+
+      /* Overscroll fix */
+      html, body {
+        width: 100%;
+        height: 100%;
+        overflow: hidden;
+        overscroll-behavior: none;
+        background-color: #0f0e17;
+      }
+
+      /* KaTeX Formula Styling */
+      .katex {
+        font-family: KaTeX_Main, 'Times New Roman', serif !important;
+        font-size: 1.1em !important;
+      }
+
+      .katex-display {
+        overflow-x: auto;
+        overflow-y: hidden;
+        padding: 0.5em 0;
       }
 
       /* Tailwind Font Classes */
